feat: add modal to handle emails

--- a/src/app/clients/offices-list/offices-list.component.html
+++ b/src/app/clients/offices-list/offices-list.component.html
@@ -26,6 +26,7 @@
         <th>Ciudad</th>
         <th>Latitud</th>
         <th>Longitud</th>
+        <th>Correos</th>
         <th>Eliminar</th>
       </tr>
     </thead>
@@ -37,6 +38,18 @@
           <td class="p-2"> {{office.city}} </td>
           <td class="p-2"> {{office.location.lat}} </td>
           <td class="p-2"> {{office.location.lng}} </td>
+          <td class="p-2 space-x-2 ">
+            <div class="flex items-center justify-center space-x-2 ">
+              <span (click)="openEmailListModal(client.emails)"
+                class="cursor-pointer text-brand hover:text-green-900">{{office.emails?.length}}</span>
+              <svg (click)="openEmailModal(office.name)" xmlns="http://www.w3.org/2000/svg"
+                class="w-6 h-6 outline-none cursor-pointer focus:outline-none text-brand hover:text-green-900"
+                fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+              </svg>
+            </div>
+          </td>
           <td class="p-2">
             <svg (click)="confirmDelete(office.id)" xmlns="http://www.w3.org/2000/svg"
               class="w-6 h-6 m-auto cursor-pointer hover:text-green-900" fill="none" viewBox="0 0 24 24"
@@ -56,3 +69,103 @@
   </table>
   <!-- Offices Table -->
 </div>
+
+
+<!-- Modal to add Email -->
+<div *ngIf="showEmailModalBackdrop" class="fixed inset-0 z-10 overflow-y-auto" aria-labelledby="modal-title"
+  role="dialog" aria-modal="true">
+  <div class="flex items-center justify-center min-h-screen px-4 pt-4 pb-20 text-center sm:items-end sm:block sm:p-0">
+    <div class="fixed inset-0 transition-opacity bg-gray-500 bg-opacity-75" aria-hidden="true"></div>
+
+    <!-- This element is to trick the browser into centering the modal contents. -->
+    <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
+
+    <div [ngClass]="{'opacity-0': !showEmailModal, 'opacity-100': showEmailModal}"
+      class="inline-block overflow-hidden text-left align-bottom transition-all transform bg-white shadow-xl rounded-xl sm:my-8 sm:align-middle sm:max-w-xl sm:w-full">
+      <div class="px-4 pt-5 pb-4 bg-brand sm:p-6 sm:pb-4">
+        <h1 class="text-xl text-white sm:text-3xl">Correos autorizados</h1>
+      </div>
+      <div class="px-12 py-12 bg-white sm:flex sm:items-start">
+        <!-- Form row -->
+        <div class="flex items-center justify-center w-full space-x-8">
+          <!-- Form input -->
+          <div class="flex flex-col items-center w-full h-16">
+            <label
+              class="flex flex-col items-center w-64 px-4 py-6 tracking-wide uppercase transition-all duration-150 ease-linear bg-white border rounded-md shadow-md cursor-pointer text-brand border-blue hover:bg-brand hover:text-white">
+              <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12" />
+              </svg>
+              <span class="mt-2 text-base leading-normal">{{fileName ? fileName : 'Cargar csv'}}</span>
+              <input accept=".csv" (change)="fileChanged($event)" type='file' class="hidden" />
+            </label>
+          </div>
+          <!-- Form input -->
+        </div>
+        <!-- End Form row -->
+      </div>
+      <div class="px-4 py-3 bg-gray-50 sm:px-6 sm:flex sm:flex-row-reverse">
+        <button (click)="closeEmailModal(true)" type="button"
+          [ngClass]="{'opacity-40 cursor-default': !newEmails.length}" [disabled]="!newEmails.length"
+          class="inline-flex justify-center w-full px-4 py-2 text-base font-medium text-white border border-transparent rounded-md shadow-sm bg-brand hover:bg-green-900 focus:outline-none sm:ml-3 sm:w-auto sm:text-sm">
+          Guardar
+
+        </button>
+        <button type="button" (click)="closeEmailModal()"
+          class="inline-flex justify-center w-full px-4 py-2 mt-3 text-base font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
+          Cancelar
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- End Modal to add Email -->
+
+
+<!-- Modal to list Emails -->
+<div *ngIf="showEmailListBackDrop" class="fixed inset-0 z-10 overflow-y-auto" aria-labelledby="modal-title"
+  role="dialog" aria-modal="true">
+  <div class="flex items-center justify-center min-h-screen px-4 pt-4 pb-20 text-center sm:items-end sm:block sm:p-0">
+    <div class="fixed inset-0 transition-opacity bg-gray-500 bg-opacity-75" aria-hidden="true"></div>
+
+    <!-- This element is to trick the browser into centering the modal contents. -->
+    <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
+
+    <div [ngClass]="{'opacity-0': !showEmailListModal, 'opacity-100': showEmailListModal}"
+      class="inline-block overflow-hidden text-left align-bottom transition-all transform bg-white shadow-xl rounded-xl sm:my-8 sm:align-middle sm:max-w-xl sm:w-full">
+      <div class="px-4 pt-5 pb-4 bg-brand sm:p-6 sm:pb-4">
+        <h1 class="text-xl text-white sm:text-3xl">Correos autorizados</h1>
+      </div>
+      <div class="px-12 py-12 overflow-y-auto bg-white sm:flex sm:items-start max-h-96">
+        <!-- Client Table Desktop only -->
+        <table *ngIf="emailsToShow.length !== 0"
+          class="hidden w-full text-xs text-center table-auto sm:table sm:text-lg">
+          <thead>
+            <tr>
+              <th>Correo</th>
+              <th>Status</th>
+            </tr>
+          </thead>
+          <tbody>
+            <ng-container *ngFor="let email of emailsToShow; let i = index;">
+              <tr [ngClass]="{'bg-gray-200': i % 2 === 0}" class="text-center">
+                <td class="p-2"> {{email.email}} </td>
+                <td class="p-2"> {{email.active ? 'Habilitado': 'Deshabilitado'}} </td>
+              </tr>
+            </ng-container>
+
+          </tbody>
+        </table>
+        <!-- End Client Table Desktop only -->
+      </div>
+      <div class="px-4 py-3 bg-gray-50 sm:px-6 sm:flex sm:flex-row-reverse">
+        <button type="button" (click)="closeEmailListModal()"
+          class="inline-flex justify-center w-full px-4 py-2 mt-3 text-base font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
+          Cerrar
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- End Modal to list Emails -->
