feat: add resources state

--- a/src/app/clients/client-form/client-form.component.html
+++ b/src/app/clients/client-form/client-form.component.html
@@ -152,7 +152,7 @@
         </div>
         <!-- End Form row -->
       </div>
-      <div class="px-4 py-3 bg-gray-50 sm:px-6 sm:flex sm:flex-row-reverse">
+      <div class="px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
         <button (click)="closeMebAdminModal()" type="button" [ngClass]="{'opacity-40 cursor-default': !mebAdmin.id}"
           [disabled]="!mebAdmin.id"
           class="inline-flex justify-center w-full px-4 py-2 text-base font-medium text-white border border-transparent rounded-md shadow-sm bg-brand hover:bg-green-900 focus:outline-none sm:ml-3 sm:w-auto sm:text-sm">
@@ -160,7 +160,7 @@
 
         </button>
         <button type="button" (click)="closeMebAdminModal()"
-          class="inline-flex justify-center w-full px-4 py-2 mt-3 text-base font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
+          class="inline-flex justify-center w-full px-4 py-2 mt-3 text-base font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm hover: focus:outline-none focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
           Cancelar
         </button>
       </div>
@@ -208,7 +208,7 @@
         </div>
         <!-- End Form row -->
       </div>
-      <div class="px-4 py-3 bg-gray-50 sm:px-6 sm:flex sm:flex-row-reverse">
+      <div class="px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
         <button (click)="closeClientAdminModal()" type="button"
           [ngClass]="{'opacity-40 cursor-default': !clientAdmin.id}" [disabled]="!clientAdmin.id"
           class="inline-flex justify-center w-full px-4 py-2 text-base font-medium text-white border border-transparent rounded-md shadow-sm bg-brand hover:bg-green-900 focus:outline-none sm:ml-3 sm:w-auto sm:text-sm">
@@ -216,7 +216,7 @@
 
         </button>
         <button type="button" (click)="closeClientAdminModal(true)"
-          class="inline-flex justify-center w-full px-4 py-2 mt-3 text-base font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
+          class="inline-flex justify-center w-full px-4 py-2 mt-3 text-base font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm hover: focus:outline-none focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
           Cancelar
         </button>
       </div>
