--- a/src/app/clients/office-form/office-form.component.html
+++ b/src/app/clients/office-form/office-form.component.html
@@ -225,7 +225,7 @@
         </div>
         <!-- End Form row -->
       </div>
-      <div class="px-4 py-3 bg-gray-50 sm:px-6 sm:flex sm:flex-row-reverse">
+      <div class="px-4 py-3  sm:px-6 sm:flex sm:flex-row-reverse">
         <button (click)="closeMebAdminModal(true)" type="button" [ngClass]="{'opacity-40 cursor-default': !mebAdmin.id}"
           [disabled]="!mebAdmin.id"
           class="inline-flex justify-center w-full px-4 py-2 text-base font-medium text-white border border-transparent rounded-md shadow-sm bg-brand hover:bg-green-900 focus:outline-none sm:ml-3 sm:w-auto sm:text-sm">
@@ -233,7 +233,7 @@
 
         </button>
         <button type="button" (click)="closeMebAdminModal()"
-          class="inline-flex justify-center w-full px-4 py-2 mt-3 text-base font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
+          class="inline-flex justify-center w-full px-4 py-2 mt-3 text-base font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm hover: focus:outline-none focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
           Cancelar
         </button>
       </div>
@@ -280,7 +280,7 @@
         </div>
         <!-- End Form row -->
       </div>
-      <div class="px-4 py-3 bg-gray-50 sm:px-6 sm:flex sm:flex-row-reverse">
+      <div class="px-4 py-3  sm:px-6 sm:flex sm:flex-row-reverse">
         <button (click)="closeClientAdminModal(true)" type="button"
           [ngClass]="{'opacity-40 cursor-default': !clientAdmin.id}" [disabled]="!clientAdmin.id"
           class="inline-flex justify-center w-full px-4 py-2 text-base font-medium text-white border border-transparent rounded-md shadow-sm bg-brand hover:bg-green-900 focus:outline-none sm:ml-3 sm:w-auto sm:text-sm">
@@ -288,7 +288,7 @@
 
         </button>
         <button type="button" (click)="closeClientAdminModal()"
-          class="inline-flex justify-center w-full px-4 py-2 mt-3 text-base font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
+          class="inline-flex justify-center w-full px-4 py-2 mt-3 text-base font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm hover: focus:outline-none focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
           Cancelar
         </button>
       </div>
@@ -336,7 +336,7 @@
         </div>
         <!-- End Form row -->
       </div>
-      <div class="px-4 py-3 bg-gray-50 sm:px-6 sm:flex sm:flex-row-reverse">
+      <div class="px-4 py-3  sm:px-6 sm:flex sm:flex-row-reverse">
         <button (click)="closeRepairAdminModal(true)" type="button"
           [ngClass]="{'opacity-40 cursor-default': !repairAdmin.id}" [disabled]="!repairAdmin.id"
           class="inline-flex justify-center w-full px-4 py-2 text-base font-medium text-white border border-transparent rounded-md shadow-sm bg-brand hover:bg-green-900 focus:outline-none sm:ml-3 sm:w-auto sm:text-sm">
@@ -344,7 +344,7 @@
 
         </button>
         <button type="button" (click)="closeRepairAdminModal()"
-          class="inline-flex justify-center w-full px-4 py-2 mt-3 text-base font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
+          class="inline-flex justify-center w-full px-4 py-2 mt-3 text-base font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm hover: focus:outline-none focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
           Cancelar
         </button>
       </div>
@@ -392,7 +392,7 @@
         </div>
         <!-- End Form row -->
       </div>
-      <div class="px-4 py-3 bg-gray-50 sm:px-6 sm:flex sm:flex-row-reverse">
+      <div class="px-4 py-3  sm:px-6 sm:flex sm:flex-row-reverse">
         <button (click)="closeMaintenanceAdminModal(true)" type="button"
           [ngClass]="{'opacity-40 cursor-default': !maintenanceAdmin.id}" [disabled]="!maintenanceAdmin.id"
           class="inline-flex justify-center w-full px-4 py-2 text-base font-medium text-white border border-transparent rounded-md shadow-sm bg-brand hover:bg-green-900 focus:outline-none sm:ml-3 sm:w-auto sm:text-sm">
@@ -400,7 +400,7 @@
 
         </button>
         <button type="button" (click)="closeMaintenanceAdminModal()"
-          class="inline-flex justify-center w-full px-4 py-2 mt-3 text-base font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
+          class="inline-flex justify-center w-full px-4 py-2 mt-3 text-base font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm hover: focus:outline-none focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
           Cancelar
         </button>
       </div>
@@ -448,7 +448,7 @@
         </div>
         <!-- End Form row -->
       </div>
-      <div class="px-4 py-3 bg-gray-50 sm:px-6 sm:flex sm:flex-row-reverse">
+      <div class="px-4 py-3  sm:px-6 sm:flex sm:flex-row-reverse">
         <button (click)="closeInventoryAdminModal(true)" type="button"
           [ngClass]="{'opacity-40 cursor-default': !inventoryAdmin.id}" [disabled]="!inventoryAdmin.id"
           class="inline-flex justify-center w-full px-4 py-2 text-base font-medium text-white border border-transparent rounded-md shadow-sm bg-brand hover:bg-green-900 focus:outline-none sm:ml-3 sm:w-auto sm:text-sm">
@@ -456,7 +456,7 @@
 
         </button>
         <button type="button" (click)="closeInventoryAdminModal()"
-          class="inline-flex justify-center w-full px-4 py-2 mt-3 text-base font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
+          class="inline-flex justify-center w-full px-4 py-2 mt-3 text-base font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm hover: focus:outline-none focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
           Cancelar
         </button>
       </div>
