--- a/src/app/clients/offices-list/offices-list.component.html
+++ b/src/app/clients/offices-list/offices-list.component.html
@@ -105,7 +105,7 @@
         </div>
         <!-- End Form row -->
       </div>
-      <div class="px-4 py-3 bg-gray-50 sm:px-6 sm:flex sm:flex-row-reverse">
+      <div class="px-4 py-3  sm:px-6 sm:flex sm:flex-row-reverse">
         <button (click)="closeEmailModal(true)" type="button"
           [ngClass]="{'opacity-40 cursor-default': !newEmails.length}" [disabled]="!newEmails.length"
           class="inline-flex justify-center w-full px-4 py-2 text-base font-medium text-white border border-transparent rounded-md shadow-sm bg-brand hover:bg-green-900 focus:outline-none sm:ml-3 sm:w-auto sm:text-sm">
@@ -113,7 +113,7 @@
 
         </button>
         <button type="button" (click)="closeEmailModal()"
-          class="inline-flex justify-center w-full px-4 py-2 mt-3 text-base font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
+          class="inline-flex justify-center w-full px-4 py-2 mt-3 text-base font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm hover: focus:outline-none focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
           Cancelar
         </button>
       </div>
@@ -159,9 +159,9 @@
         </table>
         <!-- End Client Table Desktop only -->
       </div>
-      <div class="px-4 py-3 bg-gray-50 sm:px-6 sm:flex sm:flex-row-reverse">
+      <div class="px-4 py-3  sm:px-6 sm:flex sm:flex-row-reverse">
         <button type="button" (click)="closeEmailListModal()"
-          class="inline-flex justify-center w-full px-4 py-2 mt-3 text-base font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
+          class="inline-flex justify-center w-full px-4 py-2 mt-3 text-base font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm hover: focus:outline-none focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
           Cerrar
         </button>
       </div>
