--- a/src/app/components/headernav/headernav.component.html
+++ b/src/app/components/headernav/headernav.component.html
@@ -15,7 +15,7 @@
   <div class="relative inline-block text-left">
     <div>
       <button (click)="dropDownOpen = !dropDownOpen" type="button"
-        class="inline-flex items-center justify-center w-full px-4 py-2 text-sm font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm outline-none ring:brand focus:outline-none hover:bg-gray-50"
+        class="inline-flex items-center justify-center w-full px-4 py-2 text-sm font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm outline-none ring:brand focus:outline-none hover:"
         id="menu-button" aria-expanded="true" aria-haspopup="true">
         <!-- User Image -->
         <!-- <div class="w-8 h-8 mr-2 rounded-full bg-brand">
