feat: Add list and create resource type

--- a/src/app/resources/resources-list/resources-list.component.html
+++ b/src/app/resources/resources-list/resources-list.component.html
@@ -1,1 +1,6 @@
-<p>resources-list works!</p>
+<app-container>
+  <app-table [columns]="columns" [headers]="headers" [data$]="resources$"
+    *ngIf="((resources$ |async)?.length !== 0) && !(loader$ | async)" class="w-full"></app-table>
+  <!-- Loader -->
+  <app-loader *ngIf="loader$ |async"></app-loader>
+</app-container>
