--- a/src/app/components/molecules/table/table/table.component.html
+++ b/src/app/components/molecules/table/table/table.component.html
@@ -10,11 +10,15 @@
         <!-- Text -->
         <td class="p-2" *ngFor="let column of columns">
           <span [ngSwitch]="column.type">
+            <!-- Text -->
             <span *ngSwitchCase="columnTypes.text">{{item[column.name]}}</span>
+            <!-- Boolean -->
             <span *ngSwitchCase="columnTypes.boolean">{{item[column.name]? 'Si' : 'No'}}</span>
-            <span *ngSwitchCase="columnTypes.image">
-              <img class="w-8 rounded-full" src="{{item[column.name]}}" alt="Image" *ngSwitchCase="columnTypes.image">
-            </span>
+            <!-- Image -->
+            <div *ngSwitchCase="columnTypes.image">
+              <img class="rounded-full w-8 h-8" src="{{item[column.name]}}" alt="Image" *ngSwitchCase="columnTypes.image">
+            </div>
+            <!-- Extra -->
             <span *ngSwitchCase="columnTypes.extra">
               <div class="flex items-center justify-center space-x-2 ">
                 <span class="cursor-pointer focus:outline-none text-brand hover:text-green-900"
@@ -29,6 +33,7 @@
                 </svg>
               </div>
             </span>
+            <!-- Edit -->
             <span *ngSwitchCase="columnTypes.edit">
               <svg (click)="column.onClick" xmlns="http://www.w3.org/2000/svg"
                 class="w-6 h-6 m-auto cursor-pointer focus:outline-none hover:text-green-900" fill="none"
@@ -37,6 +42,7 @@
                   d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
               </svg>
             </span>
+            <!-- Delete -->
             <span *ngSwitchCase="columnTypes.delete">
               <svg (click)="column.onClick" xmlns="http://www.w3.org/2000/svg"
                 class="w-6 h-6 m-auto cursor-pointer hover:text-green-900" fill="none" viewBox="0 0 24 24"
@@ -47,45 +53,6 @@
             </span>
           </span>
         </td>
-        <!-- <td class="p-2" *ngSwitchCase="columnTypes.boolean">
-          {{item[column.name]? 'Si' : 'No'}}
-        </td>
-        <td class="p-2" *ngSwitchCase="columnTypes.image">
-          <img class="w-8 rounded-full" src="{{item[column.name]}}" alt="Image" *ngSwitchCase="columnTypes.image">
-        </td>
-        <td class="flex items-center justify-center space-x-2 p-2" *ngSwitchCase="columnTypes.extra">
-          <div class="flex items-center justify-center space-x-2 ">
-            <span class="cursor-pointer focus:outline-none text-brand hover:text-green-900" (click)="column.onClick">
-              {{item[column.name]}}
-            </span>
-            <svg (click)="column.onClickPlus" xmlns="http://www.w3.org/2000/svg"
-              class="w-6 h-6 outline-none cursor-pointer focus:outline-none text-brand hover:text-green-900" fill="none"
-              viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
-            </svg>
-          </div>
-        </td>
-        <td class="p-2" *ngSwitchCase="columnTypes.edit">
-          <svg (click)="column.onClick" xmlns="http://www.w3.org/2000/svg"
-            class="w-6 h-6 m-auto cursor-pointer focus:outline-none hover:text-green-900" fill="none"
-            viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-              d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
-          </svg>
-        </td>
-        <td class="p-2" *ngSwitchCase="columnTypes.delete">
-          <svg (click)="column.onClick" xmlns="http://www.w3.org/2000/svg"
-            class="w-6 h-6 m-auto cursor-pointer hover:text-green-900" fill="none" viewBox="0 0 24 24"
-            stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-              d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
-          </svg>
-        </td> -->
-        <span *ngFor="let column of columns">
-
-        </span>
-
       </tr>
     </ng-container>
   </tbody>
