--- a/src/app/resources/resources-form/resources-form.component.html
+++ b/src/app/resources/resources-form/resources-form.component.html
@@ -72,11 +72,12 @@
 
         <!-- Measure indicators -->
         <div class="flex flex-col w-full h-16">
-          <div class="py-4 max-w-xs ml-4 bg-white rounded-xl shadow-md mt-2"
+          <div class="py-2 max-w-xs ml-4 mt-6 rounded-xl border-solid border-2 border-gray-300 flex justify-center"
             (click)="resourceForm.get('measureIndicators')?.setValue(!resourceForm.get('measureIndicators')?.value)">
             <label class="flex items-center space-x-3" for="measureIndicators">
               <input name="measureIndicators" formControlName="measureIndicators" type="checkbox"
-                class="form-tick appearance-none h-6 w-6 border border-gray-300 rounded-md checked:border-brand checked:border-transparent focus:outline-none">
+                class="form-tick appearance-none h-6 w-6 border border-gray-300 rounded-md checked:border-brand checked:border-transparent focus:outline-none
+                checked:bg-brand">
               <span class="text-gray-900 font-medium">Indicadores de medida</span>
             </label>
           </div>
@@ -88,8 +89,8 @@
       <div class="flex items-center justify-center w-full">
         <div class="flex items-center justify-center w-full space-x-8">
           <!-- Create button -->
-          <button [ngClass]="{'opacity-40 cursor-default': !resourceForm.valid}" [disabled]="!resourceForm.valid || (loader$ | async)"
-            class="w-42 btn-primary" (click)="submitForm()">
+          <button [ngClass]="{'opacity-40 cursor-default': !resourceForm.valid}"
+            [disabled]="!resourceForm.valid || (loader$ | async)" class="w-42 btn-primary" (click)="submitForm()">
             Crear
             <svg *ngIf="loader$ | async" xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 animate-spin" fill="none"
               viewBox="0 0 24 24" stroke="currentColor">
