feat: Add resource components

--- a/src/app/components/molecules/table/table/table.component.html
+++ b/src/app/components/molecules/table/table/table.component.html
@@ -26,7 +26,7 @@
                   (click)="column.onClick">
                   {{item[column.name].length}}
                 </span>
-                <svg (click)="onClickPlus(column.onClickPlus)" xmlns="http://www.w3.org/2000/svg"
+                <svg (click)="onClickPlus(column.onClickPlus, i)" xmlns="http://www.w3.org/2000/svg"
                   class="w-6 h-6 outline-none cursor-pointer focus:outline-none text-brand hover:text-green-900"
                   fill="none" viewBox="0 0 24 24" stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
